--- a/src/app/list/list.page.scss
+++ b/src/app/list/list.page.scss
@@ -1,1 +1,25 @@
+.colorCol{
+    background: #1f618d;
+}
+ion-content {
+    --background: #2a3e52;
 
+}
+ion-col{
+    color: #ffffff;
+}
+.linea{
+  
+    border-bottom:solid 1px grey;
+    padding-bottom: 20%;
+    width:100%;
+    height:50px;
+  }
+  .cablinea{
+  
+    border-bottom:solid 1px grey;
+    padding-bottom: 10%;
+    width:100%;
+    height:50px;
+    font-weight: bold;
+  }
