--- a/src/app/fotos-reporte/fotos-reporte.page.html
+++ b/src/app/fotos-reporte/fotos-reporte.page.html
@@ -13,5 +13,32 @@
 </ion-header>
 
 <ion-content>
+<ion-card>
+  <ion-card-header>
+    <ion-card-subtitle>Recuerde ingresar los datos antes de tomar la foto</ion-card-subtitle>
+    <ion-card-title>Tomar Foto</ion-card-title>
+  </ion-card-header>
+
+  <ion-card-content>
+<ion-row>
+  <ion-col size="12">
+    <ion-card>
+     <img [src]="image" *ngIf="image"/>
+     
+    </ion-card>  
+  </ion-col>
+</ion-row>
+</ion-card-content>
+ <br/> 
+  
+    <ion-item>
+
+   <ion-button color="dark" style="width:100%"expand="full" fill="outline" class="margintop" (click)="camara()">Toma una foto <ion-icon name="camera"></ion-icon> </ion-button>
+<br/>
+        <ion-button color="dark" expand="full" fill="outline" class="margintop" (click)="uploadimagen()" *ngIf="image">Subir Imagen <ion-icon name="camera"></ion-icon> </ion-button>
+  </ion-item>
+  
+</ion-card>
+
 
 </ion-content>
